# ann

./: CMakeLists.txt  VEGA_ANN.workspace  VEGAann.project
REF/src/: ReadMe.txt  ann1Dn.cpp  ann1Dn.vcproj  stdafx.cpp  stdafx.h  trace.cpp  trace.h
REF/src/Lib/: signal.cpp  signal.h
REF/src/LibNN/: network.cpp  network.h  neuron.cpp  neuron.h
include/: base.h  network.h  neuron.h
src/: network.cpp  neuron.cpp
